# llm_api

./: .env.example  .env.local.example  .env.vps.example  .gitattributes  .gitignore  Dockerfile.backend  README.md  agents.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-vps-main.yml
clients/dart/: pubspec.yaml
clients/python/: pyproject.toml
clients/python/llm_api_client/: __init__.py  client.py  errors.py  models.py
docs/: ROADMAP.md  api_endpoints.md  test_credentials.md  things-to-add.md
docs/adr/: 001-fastapi-over-django.md  002-model-discovery-and-schema.md  003-session-management.md  004-client-library.md  005-database-backed-model-registry.md  006-3d-viewer-obj-three-dart.md  007-provider-discovery-and-credits.md
docs/architecture/: software_architecture_backend.md  software_architecture_client.md  software_architecture_frontend.md  system_architecture.md
docs/contracts/: openapi.yaml
docs/design/: detailed_design_backend.md  detailed_design_client.md  detailed_design_cr002.md  detailed_design_frontend.md  ui_mockups_plugai.md
docs/ops/: deployment.md  local_runtimes.md  provider_keys.md  supabase_vps_release.md  (+2 more)
frontend/: Dockerfile  README.md  analysis_options.yaml  pubspec.yaml
llm_api/: background_tasks.py  main.py
reports/: flutter_test.json  pytest.xml
scripts/: create_user.py  generate_test_report.sh  migrate_sqlite_to_postgres.py  migrate_to_hosted_defaults.py  update_model_schemas.py
shap_e_model_cache/: diffusion_config.yaml  text_cond_config.yaml  transmitter_config.yaml
tests/: conftest.py
(+207 files in other folders)
