[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluggably-llm-client"
version = "0.1.0"
description = "Python client for the Pluggably LLM API Gateway"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.26.0",
  "pydantic>=2.6.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_api_client*"]
